# DelaunayInterfacesCpp

./: .gitignore  BUILD.md  CMakeLists.txt  MIGRATION.md  PROJECT_SUMMARY.md  README.md  test_load.jl
examples/: julia_example.jl  python_example.py  simple_example.cpp
include/delaunay_interfaces/: barycentric_subdivision.hpp  chromatic_partitioning.hpp  interface_generation.hpp  types.hpp
julia/: DelaunayInterfaces.jl  DelaunayInterfacesCpp.jl  Manifest.toml  Project.toml  bindings.cpp
julia/src/: DelaunayInterfaces.jl
python/: __init__.py  bindings.cpp  setup.py
src/: barycentric_subdivision.cpp  interface_generation.cpp
tests/: CMakeLists.txt  test_basic.cpp
